# jupyter-utils

./: pyproject.toml  setup.sh
src/nb_utils/: __init__.py  options.py
src/nb_utils/bigquery/: __init__.py  auth.py  client.py
src/nb_utils/jupyter/: __init__.py  enable.py  magics.py
