[tool.poetry]
name = "jupyter-utils"
version = "0.1.0"
description = "Мои полезные утилиты для Jupyter Notebook"
authors = ["Alexander Bosikov alexanderbosikov@gmail.com"]
readme = "README.md"
packages = [{include = "nb_utils", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3"
polars = "^1.37"
numpy = "^1.26"
scipy = "^1.16"
scikit-learn = "^1.8"
matplotlib = "^3.10"
seaborn = "^0.13"
jupyterlab = "^4.5"
tqdm = "^4.67"
google-cloud-bigquery = "^3.38"
google-cloud-bigquery-storage = "^2.34"
statsmodels = "^0.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"